backend/Origam.Server/assets/identity/css/main.css
body {
  background-color: #E9E8F0;
  color: #0D0D0D;
  font-family: "IBM Plex Sans", sans-serif;
  font-size: 12px;
  font-weight: 500;
  font-style: normal;
  line-height: 1.5em;
  text-rendering: optimizeLegibility;
  height: 100vh;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

*:focus {
  outline: none;
}

a {
  cursor: pointer;
  color: #0D0D0D;
  font-style: normal;
  text-decoration: none;
}

a, a img, .svg, .input-form .input-row input {
  transition: all 300ms linear;
}

a:active, a:hover {
  outline: 0;
  color: rgba(13, 13, 13, 0.5);
}

a.btn {
  color: #0D0D0D;
  box-sizing: border-box;
  margin: 0.25em 0px 0.25em 0;
  white-space: nowrap;
  -webkit-border-radius: 3em;
  -moz-border-radius: 3em;
  -ms-border-radius: 3em;
  -o-border-radius: 3em;
  border-radius: 3em;
  font-size: 14px;
  line-height: 1.42857143;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  user-select: none;
  border: 1px solid ;
  width: 100%;
  height: 40px;
  align-items: center;
  justify-content: center;
  font-weight: bold;
}

a.btn.primary {
  background: #4C84FF;
  border-color: #4C84FF;
  color: #FFFFFF;
}

a.btn.primary:hover {
  background: #FFFFFF;
  color: #4C84FF;
}

.btn:hover, .btn:focus, .btn.focus {
  text-decoration: none;
}

.input-row input {
  background-color: white;
  max-width: 360px;
  height: 38px;
  width: 100%;
}

.input-form .input-row input:hover, .input-form .input-row input:focus {
  background: #FFFFFF;
  border-color: #4C84FF;
}

.detailview-module.with-title .input-row {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-bottom: 15px;
}

.input-form .input-row {
  margin: 5px 0;
}

input {
  line-height: normal;
  border: 1px solid #B0AFB7;
}

.form-group.login-remember label input {
  margin: 0px 3px 0px 0px;
}

input[type="checkbox"], input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

.detailview-module.with-title .form-group.login-remember strong {
  font-weight: normal;
  margin-left: 4px;
  font-size: 0.9em;
}

.detailview-container{
  width: 100%;
}

.detailview-container .detailview-module {
  margin: 0;
  padding-bottom: 0;
}

.detailview-module.with-title {
  background-color: transparent;
  width: 100%;
}

.detailview-module.with-title .input-row label {
    margin-bottom: 1px;
    font-weight: 1000;
}

.input-form .input-row label {
  width: 135px;
  display: block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.input-form .input-row input {
  border: 1px solid rgb(176, 175, 183);
  box-sizing: border-box;
  color: #0D0D0D;
  font-size: 14px;
  padding: 0 10px;
}

.detailview-module.with-title .input-row .btn {
  width: 100%;
  height: 40px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-weight: bold;
}

.form-group {
  margin-bottom: 15px;
}

.detailview-module.with-title h2 {
  display: none;
}

.detailview-module.with-title .form-group.login-remember {
  margin-top: -8px;
}

#languageSelectForm, .reset-password-statement, .initial-user-statement {
    font-size: 0.9em;
    padding: 0 1.5em;
}

.detailview-module.with-title .form-group.login-remember label {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
}

.input-row .btn-default {
  color: #333;
  background-color: #fff;
  border-color: #ccc;
}

.input-row .btn-default:hover {
  color: #333;
  background-color: #e6e6e6;
  border-color: #adadad;
}

.svg:hover{
  stroke: #0D0D0D;
}

.svg {
  stroke: #77767E;
  stroke-width: 1.5;
  height: 20px;
  padding-right: 3px;
}

.page-content{
  flex-grow: 1;
  padding-left: 10px;
  padding-right: 10px;
  max-width: 360px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

iframe
{
  border:0
}

.logo-container{
  margin-bottom: 50px;
  width: 100%;
  flex: 1;
  > img {
	  flex: 1;
  }
}

.centered{
  display: flex;
  justify-content: center;
}

.in-page-link{
  text-decoration: underline;
}

input::placeholder {
  color: transparent;
}

input.showPlaceholder::placeholder {
  color: #aaaaaa;
}

div.input-row a.btn{
  margin-right: 10px;
}

.confirmation-text{
  padding-top: 12px;
}

.alert-danger {
  color: #a94442;
  background-color: #f2dede;
  border-color: #ebccd1;
}

.alert {
  padding: 15px;
  margin-bottom: 20px;
  border: 1px solid transparent;
  border-radius: 4px;
}

#browserLinks{
  display: flex;
  flex-direction: column;
}

#overlay{
  display: none;
}

#page-container{
  display: block;
}

#browserLinks a{
  width: 100%;
  height: 40px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-weight: bold;
}

#continueAnywayLink{
  display: block;
  margin-top: 12px;
}

